Get info from weather api

--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your city" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Zq-6k-6rg">
-                                <rect key="frame" x="105" y="85" width="111" height="21"/>
+                                <rect key="frame" x="104.5" y="85" width="111" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -46,6 +46,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1I7-qu-s3d">
                                 <rect key="frame" x="133" y="168" width="55" height="30"/>
                                 <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="getWeather:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LoG-yI-RoT"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9cA-0v-z7q">
                                 <rect key="frame" x="16" y="246" width="288" height="20.5"/>
@@ -75,6 +78,10 @@
                             <constraint firstItem="9cA-0v-z7q" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="zgQ-wZ-ts3"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cityTextField" destination="kYj-04-VRP" id="yfE-pj-jLZ"/>
+                        <outlet property="resultLabel" destination="9cA-0v-z7q" id="ES2-uJ-a76"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
